--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,13 @@ logs
 results
 
 npm-debug.log
+
+.idea/workspace.xml
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+Icon?
+ehthumbs.db
+Thumbs.db
