--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+node_modules
 lib-cov
 *.seed
 *.log
@@ -6,13 +7,10 @@ lib-cov
 *.out
 *.pid
 *.gz
-
 pids
 logs
 results
-
 npm-debug.log
-
 .idea/workspace.xml
 .DS_Store
 .DS_Store?
