--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 node_modules
-lib-cov
+coverage
 *.seed
 *.log
 *.csv
@@ -11,7 +11,7 @@ pids
 logs
 results
 npm-debug.log
-.idea/*
+.idea
 .DS_Store
 .DS_Store?
 ._*
