added repo field to package.json

--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
   "devDependencies": {
     "colors": "*"
   },
+  "repository" :
+  { "type" : "git"
+    , "url" : "https://github.com/dremoor/tequila.git"
+  },
   "engines": {
     "node": ">=0.6.6"
   }
