--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tequila",
-  "version": "0.1.2",
-  "author": "Sean Smith <support@dremoor@gmail.com>",
+  "version": "0.1.3",
+  "author": "Sean Smith <dremoor@gmail.com>",
   "description": "tequila es muy bueno",
   "contributors": [
     {
@@ -10,9 +10,9 @@
     }
   ],
   "dependencies": {
-    "connect": "*",
-    "mongodb": "*",
-    "socket.io": "*"
+    "connect": ">=2.8.8",
+    "mongodb": ">=1.3.19",
+    "socket.io": ">=0.9.16"
   },
   "scripts": {
     "test": "make"
@@ -28,6 +28,6 @@
     "url": "https://github.com/dremoor/tequila.git"
   },
   "engines": {
-    "node": ">=0.6.6"
+    "node": ">=0.10.18"
   }
 }
