--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,5 @@ node_js:
   - 0.11
 before_script:
   - npm install -g grunt-cli
+after_script:
+  - istanbul cover dist/node-test-cli.js --report lcovonly -- -R spec & cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
