--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,5 @@ node_js:
 before_script:
   - npm install -g grunt-cli
 after_script:
+  - npm install -g istanbul
   - istanbul cover dist/node-test-cli.js --report lcovonly -- -R spec & cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
