--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,4 @@ before_script:
 after_script:
   - npm install -g istanbul
   - istanbul cover dist/node-test-cli.js --report lcovonly -- -R spec
+  - cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
