token fix for coveralls

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tequila",
   "version": "0.1.5",
-  "author": "Sean Smith <dremoor@gmail.com>",
+  "author": "Sean Smith <sean@tgicloud.com>",
   "description": "tequila es muy bueno",
   "contributors": [
     {
