--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "contributors": [
     {
       "name": "Sean Smith",
-      "email": "dremoor@gmail.com"
+      "email": "sean@tgicloud.com"
     }
   ],
   "dependencies": {
@@ -27,7 +27,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/dremoor/tequila.git"
+    "url": "https://github.com/cloud-coder/tequila.git"
   },
   "engines": {
     "node": ">=0.10.18"
