--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     }
   ],
   "dependencies": {
-    "connect": ">=2.8.8",
-    "mongodb": ">=1.3.19",
-    "socket.io": ">=0.9.16",
+    "connect": "^2.8.8",
+    "mongodb": "^1.3.19",
+    "socket.io": "^0.9.16",
     "coveralls": "~2.11.1"
   },
   "scripts": {
